@@ -5,7 +5,6 @@
 package play;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -16,13 +15,12 @@ public class TemplateImports {
   public static final List<String> defaultScalaTemplateImports;
 
   private static final List<String> defaultTemplateImports =
-      Collections.unmodifiableList(
-          Arrays.asList(
-              "models._",
-              "controllers._",
-              "play.api.i18n._",
-              "views.%format%._",
-              "play.api.templates.PlayMagic._"));
+      List.of(
+          "models._",
+          "controllers._",
+          "play.api.i18n._",
+          "views.%format%._",
+          "play.api.templates.PlayMagic._");
 
   static {
     List<String> minimalJavaImports = new ArrayList<>(defaultTemplateImports);
@@ -31,6 +29,7 @@ public class TemplateImports {
     minimalJavaImports.add("play.core.j.PlayMagicForJava._");
     minimalJavaImports.add("play.mvc._");
     minimalJavaImports.add("play.api.data.Field");
+    minimalJavaImports.add("scala.jdk.CollectionConverters._");
     minimalJavaTemplateImports = Collections.unmodifiableList(minimalJavaImports);
 
     List<String> defaultJavaImports = new ArrayList<>(minimalJavaTemplateImports);
